[tool.poetry]
name = "galeritas"
version = "0.1.3"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.0"
pandas = "*"
numpy = "*"
scipy = "*"
matplotlib = "*"
seaborn = "*"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
